# renormalization

./: AGENT.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  PLUG_AND_PLAY.md  README.md
src/: beta.rs  critical_exponents.rs  epsilon_expansion.rs  fixed_point.rs  lib.rs  real_space.rs  scaling.rs  universality.rs  wilsonian.rs
